--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-<h1>test github pages</h1>
+<html>
+<head>
+	<link type="text/css" href="css/etiennea.css" media="all" rel="stylesheet">
+	<link type="text/css" href="css/iphones.css" media="all" rel="stylesheet">
+	<link type="text/css" href="css/termial.css" media="all" rel="stylesheet">
+</head>
+<body style="overflow: hidden">
+	<div class="marvel-device iphone6 gold" style="position: absolute;left: 50%;margin-left: -205px;top: 50%;margin-top: -405px;">
+		<div class="top-bar"></div>
+		<div class="sleep"></div>
+		<div class="volume"></div>
+		<div class="camera"></div>
+		<div class="sensor"></div>
+		<div class="speaker"></div>
+		<div class="screen" id="terminal">
+
+		</div>
+		<div class="home"></div>
+		<div class="bottom-bar"></div>
+	</div>
+	<div id="particles-js"></div>
+	<script src="js/lib/particles.js"></script>
+	<script src="js/lib/terminal.js"></script>
+	<script src="js/app.js"></script>
+</body>
+</html>
